--- a/ja.lproj/InfoPlist.strings
+++ b/ja.lproj/InfoPlist.strings
@@ -4,5 +4,7 @@
 
   Created by 中里起一 on 2024/03/08.
   
- CFBundleDisplayName = "iOSステーション";
+  // InfoPlist.strings (ja)
+  CFBundleName = "iOSステーション";
+  CFBundleDisplayName = "iOSステーション";
 */
